# rackflow

./: .gitignore  ERD.drawio  pyproject.toml  requirements.txt
rackflow/: requirements.txt
rackflow/authentication/: forms.py  models.py  urls.py  views.py
rackflow/authentication/migrations/: 0001_initial.py  0002_customuser_user_status.py
rackflow/authentication/templates/: login.html
rackflow/consumer/: admin.py  forms.py  models.py  urls.py  views.py
rackflow/consumer/migrations/: 0001_initial.py  0002_alter_order_options_alter_order_table_orderproduct_and_more.py  0003_remove_order_arr_date_order_product_details_and_more.py  0004_alter_order_a_date.py  0005_remove_order_product_details_alter_order_status.py  0006_consumer_user_order_user.py  0007_alter_orderproduct_order.py
rackflow/consumer/templates/: orderDetails.html
rackflow/core/: asgi.py  settings.py  urls.py
rackflow/dashboard/: urls.py  views.py
rackflow/dashboard/templates/: add_employee.html  list_critical_products.html  list_users.html  update_user_profile.html
rackflow/notification/: consumers.py  models.py  routing.py  urls.py  views.py
rackflow/notification/migrations/: 0001_initial.py  0002_alter_notification_type.py  0003_alter_notification_type.py  0004_alter_notification_type.py
rackflow/product/: admin.py  forms.py  models.py  urls.py  views.py
rackflow/product/migrations/: 0001_initial.py  (+6 more)
rackflow/provider/: admin.py  forms.py  models.py  urls.py  views.py
rackflow/templates/: base.html  home.html
scripts/: database_setup.sh  populate_db.py
(+31 files in other folders)
