[project]
name = "rackflow"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "daphne>=4.2.1",
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "pillow>=11.3.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "pydot>=4.0.1",
    "pyparsing>=3.2.3",
    "rich>=14.0.0",
]
